[tool.poetry]
name = "inflearn-streamlit"
version = "0.1.0"
description = ""
authors = ["twkris <kris@teamwise.im>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.37.1"
langchain-pinecone = "^0.1.2"
langchain = "^0.2.14"
langchain-core = "^0.2.34"
langchain-openai = "^0.1.22"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.21"
langchain-community = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
